Increase mobile canvas padding-top to 160px to prevent overlap with setting bar

--- a/client/src/styles/canvas.scss
+++ b/client/src/styles/canvas.scss
@@ -201,7 +201,7 @@ button:active {
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    padding-top: 150px;
+    padding-top: 160px;
   }
 
   .canvas-layout {
